--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ option(RDK_BUILD_CPP_TESTS "build the c++ tests (disabing can speed up builds" O
 option(RDK_USE_FLEXBISON "use flex/bison, if available, to build the SMILES/SMARTS/SLN parsers" OFF)
 option(RDK_TEST_COVERAGE "Use G(L)COV to compute test coverage" OFF)
 option(RDK_USE_BOOST_SERIALIZATION "Use the boost serialization library if available" ON)
+option(RDK_USE_BOOST_IOSTREAMS "Use the boost iostreams library if available" OFF)
 
 option(RDK_OPTIMIZE_NATIVE "Use native features while compiling." ON)
 option(RDK_USE_STRICT_ROTOR_DEFINITION "Use the most strict rotatable bond definition" ON)
@@ -247,6 +248,15 @@ if(RDK_USE_BOOST_SERIALIZATION)
     set(T_LIBS ${Boost_LIBRARIES})
     find_package(Boost 1.39.0 COMPONENTS serialization)
     if (Boost_SERIALIZATION_LIBRARY)
+      set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
+    endif()
+endif()
+
+if(RDK_USE_BOOST_IOSTREAMS)
+    set(T_LIBS ${Boost_LIBRARIES})
+    find_package(Boost 1.39.0 COMPONENTS iostreams)
+    if (Boost_IOSTREAMS_LIBRARY)
+      add_definitions("-DTEST_GZIP_SD")
       set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
     endif()
 endif()
