- added support for the gzip'd stream test - fixed a few things in Code/GraphMol/FileParsers/testMolSupplier.cpp

--- a/Code/GraphMol/FileParsers/CMakeLists.txt
+++ b/Code/GraphMol/FileParsers/CMakeLists.txt
@@ -21,13 +21,20 @@ rdkit_headers(FileParsers.h
 rdkit_test(fileParsersTest1 test1.cpp 
            LINK_LIBRARIES FileParsers SmilesParse Depictor SubstructMatch GraphMol RDGeneral RDGeometryLib )
 
-if (Boost_IOSTREAMS_LIBRARY)
-  set (link_Boost_IOSTREAMS ${Boost_IOSTREAMS_LIBRARY})
-else (Boost_IOSTREAMS_LIBRARY)
-  set (link_Boost_IOSTREAMS "")
-endif (Boost_IOSTREAMS_LIBRARY)
+if(RDK_BUILD_TEST_GZIP)
+    find_package(Boost 1.39.0 COMPONENTS iostreams REQUIRED)
+    set (link_compression_libs ${Boost_LIBRARIES})
+    message ("link_compression_libs = ${link_compression_libs}")
+    add_definitions("-DTEST_GZIP_SD")
+    if (NOT Boost_USE_STATIC_LIBS)
+      add_definitions("-DBOOST_IOSTREAMS_DYN_LINK")
+    endif()
+else()
+    set (link_compression_libs "")
+endif()
+
 rdkit_test(testMolSupplier testMolSupplier.cpp 
-           LINK_LIBRARIES FileParsers SmilesParse Depictor SubstructMatch GraphMol RDGeneral RDGeometryLib ${link_Boost_IOSTREAMS})
+           LINK_LIBRARIES FileParsers SmilesParse Depictor SubstructMatch GraphMol RDGeneral RDGeometryLib ${link_compression_libs})
 
 rdkit_test(testMolWriter testMolWriter.cpp LINK_LIBRARIES FileParsers SmilesParse GraphMol RDGeneral RDGeometryLib )
 
