--- a/Code/GraphMol/FileParsers/CMakeLists.txt
+++ b/Code/GraphMol/FileParsers/CMakeLists.txt
@@ -23,18 +23,17 @@ rdkit_test(fileParsersTest1 test1.cpp
 
 if(RDK_BUILD_TEST_GZIP)
     find_package(Boost 1.39.0 COMPONENTS iostreams REQUIRED)
-    set (link_compression_libs ${Boost_LIBRARIES})
-    message ("link_compression_libs = ${link_compression_libs}")
+    set (link_iostreams ${Boost_LIBRARIES})
     add_definitions("-DTEST_GZIP_SD")
     if (NOT Boost_USE_STATIC_LIBS)
       add_definitions("-DBOOST_IOSTREAMS_DYN_LINK")
     endif()
 else()
-    set (link_compression_libs "")
+    set (link_iostreams "")
 endif()
 
 rdkit_test(testMolSupplier testMolSupplier.cpp 
-           LINK_LIBRARIES FileParsers SmilesParse Depictor SubstructMatch GraphMol RDGeneral RDGeometryLib ${link_compression_libs})
+           LINK_LIBRARIES FileParsers SmilesParse Depictor SubstructMatch GraphMol RDGeneral RDGeometryLib ${link_iostreams})
 
 rdkit_test(testMolWriter testMolWriter.cpp LINK_LIBRARIES FileParsers SmilesParse GraphMol RDGeneral RDGeometryLib )
 
