--- a/Code/GraphMol/ChemReactions/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/ChemReactions/Wrap/CMakeLists.txt
@@ -10,3 +10,6 @@ add_pytest(pyChemReactions
 
 add_pytest(pyChemReactionEnumerations
          ${CMAKE_CURRENT_SOURCE_DIR}/testEnumerations.py)
+
+add_pytest(pyChemReactionSanitize
+         ${CMAKE_CURRENT_SOURCE_DIR}/testSanitize.py)
