Split up thread safe and non thread safe implementations

--- a/Code/RDGeneral/CMakeLists.txt
+++ b/Code/RDGeneral/CMakeLists.txt
@@ -23,6 +23,8 @@ rdkit_headers(Exceptions.h
               RDProps.h
               StreamOps.h
               tags.h
+              tags-nonthreadsafe.h
+              tags-threadsafe.h
               types.h
               utils.h
               versions.h
