--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -8,7 +8,7 @@ endif(APPLE)
 
 if(RDK_OPTIMIZE_NATIVE)
 add_definitions(-DUSE_BUILTIN_POPCOUNT)
-+endif(RDK_OPTIMIZE_NATIVE)
+endif(RDK_OPTIMIZE_NATIVE)
 
 set(EXTENSION rdkit)
 include_directories(${PostgreSQL_INCLUDE_DIRS})
