- added -DBOOST_SYSTEM_NO_DEPRECATED to definitions for MINGW builds - modified a few #ifdef's to discriminate better between MINGW and MSVC - added a ios::binary to Code/GraphMol/FileParsers/testMolSupplier.cpp   (I already had to add some of those in the past to avoid the CR+LF issues on Windows) - modified Code/GraphMol/FMCS/MaximumCommonSubgraph.cpp and   Code/GraphMol/FMCS/FMCS.h because checking the function pointer does not   work with DLLs as the function pointer changes upon different calls - builds under MinGW with -DRDK_USE_BOOST_SERIALIZATION=OFF and   RDK_BUILD_THREADSAFE_SSS=OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,10 @@ else()
   ADD_DEFINITIONS("-DRDK_64BIT_BUILD")
 endif()
 
+if(MINGW)
+  ADD_DEFINITIONS("-DBOOST_SYSTEM_NO_DEPRECATED")
+endif(MINGW)
+
 # defines macros: rdkit_python_extension, rdkit_test
 include(RDKitUtils)
 install(EXPORT ${RDKit_EXPORTED_TARGETS} DESTINATION ${RDKit_LibDir})
