--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,9 +44,9 @@ before_build:
   - cd c:\projects\RDKit\build
   - cmake -G "Visual Studio 12 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
 
-#test_script:
-#  - cd c:\projects\RDKit\build
-#  - ctest
+test_script:
+  - cd c:\projects\RDKit\build
+  - ctest -j2
 
 # scripts to run after build
 #after_build:
