StructChecker: added TransformAugmentedAtoms()

--- a/Code/GraphMol/StructChecker/CMakeLists.txt
+++ b/Code/GraphMol/StructChecker/CMakeLists.txt
@@ -1,9 +1,9 @@
 rdkit_library(StructChecker
-              StructChecker.cpp StructCheckerOptions.cpp StructureFlags.cpp 
+              StructChecker.cpp StructCheckerOptions.cpp StructureFlags.cpp Pattern.cpp AtomSymbolMatch.cpp
               LINK_LIBRARIES Depictor FileParsers ChemTransforms)
 
-rdkit_headers(StructChecker.h
-              DEST GraphMol/AVALON)
+rdkit_headers(StructChecker.h Pattern.h
+              DEST GraphMol/StructChecker)
 
 rdkit_test(testStructChecker  testStructChecker.cpp 
            LINK_LIBRARIES StructChecker ChemTransforms Depictor FileParsers SmilesParse 
