StructChecker: add stereo verification and some utilities.

--- a/Code/GraphMol/StructChecker/CMakeLists.txt
+++ b/Code/GraphMol/StructChecker/CMakeLists.txt
@@ -1,8 +1,8 @@
 rdkit_library(StructChecker
-              StructChecker.cpp StructCheckerOptions.cpp StructureFlags.cpp Pattern.cpp AtomSymbolMatch.cpp
+              StructChecker.cpp StructCheckerOptions.cpp StructureFlags.cpp Utilites.cpp Pattern.cpp Stereo.cpp AtomSymbolMatch.cpp
               LINK_LIBRARIES Depictor FileParsers ChemTransforms)
 
-rdkit_headers(StructChecker.h Pattern.h
+rdkit_headers(StructChecker.h Utilites.h Pattern.h Stereo.h
               DEST GraphMol/StructChecker)
 
 rdkit_test(testStructChecker  testStructChecker.cpp 
