--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -63,13 +63,13 @@ if(APPLE)
               "-Wl,-dead_strip_dylibs -bundle_loader ${PG_BINDIR}/postgres")
   add_executable("${EXTENSION}${EXTENSION_SUFFIX}"
               adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
-              rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
+              rdkit_gist.c bfp_gist.c bfp_gin.c bitstring.c rdkit_io.c rxn_op.c sfp_op.c)
 else(APPLE)
   link_directories(${PostgreSQL_LIBRARY_DIRS})
   link_directories(${RDKit_LibDir})
   add_library(${EXTENSION} SHARED
               adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
-              rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
+              rdkit_gist.c bfp_gist.c bfp_gin.c bitstring.c rdkit_io.c rxn_op.c sfp_op.c)
   target_link_libraries(${EXTENSION} ${PostgreSQL_LIBRARIES})
   if(WIN32)
     target_link_libraries(${EXTENSION} postgres)
