Fix Inchi being hardcoded into PostgreSQL (#1009)
* - this should fix the problem with "Inchi" being hardcoded into PostgreSQL

* - moved the InChI check code out of the main CMakeLists.txt
  into FindInchi.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,10 @@ if(MSVC)
   ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB")
 endif(MSVC)
 
+if(RDK_BUILD_INCHI_SUPPORT)
+  find_package(Inchi)
+endif(RDK_BUILD_INCHI_SUPPORT)
+
 if(RDK_BUILD_PYTHON_WRAPPERS)
   #-------
   # pull in python:
