Adds MSVC definition for C99's __func__

--- a/External/FreeSASA/CMakeLists.txt
+++ b/External/FreeSASA/CMakeLists.txt
@@ -23,6 +23,8 @@ if(NOT MSVC)
      else()
             SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")
      endif()
+else()
+  add_definitions( -D__func__=__FUNCTION__ )
 endif()
 
 set (freesasa_clib_srcs
