Fixes windows downloads

--- a/External/FreeSASA/CMakeLists.txt
+++ b/External/FreeSASA/CMakeLists.txt
@@ -12,7 +12,7 @@ if(needDownload)
   # don't actually use the md5 here
   if(MSVC)
     downloadAndCheckMD5("https://github.com/bp-kelley/freesasa/archive/msvc-fixes.tar.gz"
-          "${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz" 
+          "${CMAKE_CURRENT_SOURCE_DIR}/msvc-fixes.tar.gz" 
           "")
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
       ${CMAKE_CURRENT_SOURCE_DIR}/msvc-fixes.tar.gz
