add caching of the principal moments and values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,7 +235,7 @@ string(REGEX MATCH "clang" CMAKE_COMPILER_IS_CLANG "${CMAKE_C_COMPILER}")
 if(RDK_BUILD_DESCRIPTORS3D)
   find_package(Eigen3)
   if(EIGEN3_FOUND)
-    ADD_DEFINITIONS("-DRDK_HAS_EIGEN3")
+    ADD_DEFINITIONS("-DRDK_HAS_EIGEN3" "-DRDK_BUILD_DESCRIPTORS3D")
     include_directories(${EIGEN3_INCLUDE_DIR})
   else(EIGEN3_FOUND)
     message("Eigen3 not found, disabling the Descriptors3D build.")
