adding RBF for compilation

--- a/Code/GraphMol/Descriptors/CMakeLists.txt
+++ b/Code/GraphMol/Descriptors/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(RDK_BUILD_DESCRIPTORS3D)
-  set(DESC3D_HDRS MolDescriptors3D.h PBF.h PMI.h)
-  set(DESC3D_SOURCES PBF.cpp PMI.cpp)
+  set(DESC3D_HDRS MolDescriptors3D.h PBF.h PMI.h RBF.h)
+  set(DESC3D_SOURCES PBF.cpp PMI.cpp RBF.cpp)
 endif(RDK_BUILD_DESCRIPTORS3D)
 
 rdkit_library(Descriptors
