--- a/Code/GraphMol/ChemReactions/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/ChemReactions/Wrap/CMakeLists.txt
@@ -1,4 +1,5 @@
 rdkit_python_extension(rdChemReactions
+                       Enumerate.cpp
                        rdChemReactions.cpp
                        DEST Chem 
                        LINK_LIBRARIES 
@@ -7,3 +8,8 @@ ChemReactions ChemTransforms Descriptors Fingerprints Subgraphs DataStructs Depi
 add_pytest(pyChemReactions
          ${CMAKE_CURRENT_SOURCE_DIR}/testReactionWrapper.py)
 
+add_pytest(pyChemReactionEnumerations
+         ${CMAKE_CURRENT_SOURCE_DIR}/testEnumerations.py)
+
+add_pytest(pyChemReactionSanitize
+         ${CMAKE_CURRENT_SOURCE_DIR}/testSanitize.py)
