--- a/Code/GraphMol/Descriptors/CMakeLists.txt
+++ b/Code/GraphMol/Descriptors/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(RDK_BUILD_DESCRIPTORS3D)
-  set(DESC3D_HDRS MolDescriptors3D.h PBF.h PMI.h RDF.h MORSE.h WHIM.h GETAWAY.h)
-  set(DESC3D_SOURCES PBF.cpp PMI.cpp RDF.cpp MORSE.cpp WHIM.cpp GETAWAY.cpp)
+  set(DESC3D_HDRS MolDescriptors3D.h PBF.h PMI.h RDF.h MORSE.h WHIM.h GETAWAY.h) # D3autocorrelation.cpp)
+  set(DESC3D_SOURCES PBF.cpp PMI.cpp RDF.cpp MORSE.cpp WHIM.cpp GETAWAY.cpp) #D3autocorrelation.h)
 endif(RDK_BUILD_DESCRIPTORS3D)
 
 rdkit_library(Descriptors
@@ -36,6 +36,9 @@ LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataS
 LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataStructs EigenSolvers RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS} )
   rdkit_test(testGETAWAY testGETAWAY.cpp
 LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataStructs EigenSolvers RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS} )
+#  rdkit_test(test3Dauto test3Dauto.cpp
+#LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataStructs EigenSolvers RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS} )
+
 endif(RDK_BUILD_DESCRIPTORS3D)
 
 
